# SDP-Sensing-Data-Protocol-for-Scalable-Wireless-Sensing

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  algorithms_config.yaml  configurable_processor.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_full_pipeline.py  run_full_tests.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  verify_submission.yml
API_REFERENCE/: index.html
api/algorithms/: index.html
api/core/: index.html
api/models/: index.html
api/readers/: index.html
archive/: README.md
benchmarks/: schema.json
datasets/elderal/: index.html
datasets/gait/: index.html
datasets/overview/: index.html
datasets/widar/: index.html
datasets/xrf55/: index.html
datasets/zte/: index.html
development/changelog/: index.html
development/contributing/: index.html
docs/: API_REFERENCE.md  index.md  leaderboard.md  models.md
docs/api/: algorithms.md  core.md  models.md  readers.md
docs/datasets/: elderal.md  gait.md  overview.md  widar.md  xrf55.md  zte.md
docs/development/: changelog.md  contributing.md
docs/getting-started/: algorithm-guide.md  installation.md  quickstart.md
docs/user-guide/: cli.md  configuration.md  python-api.md
examples/: getting_started.ipynb  quickstart.ipynb  wsdp_tutorial.ipynb
examples/configs/: algorithms_config.yaml
examples/scripts/: configurable_processor.py
getting-started/algorithm-guide/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
models/: index.html
scripts/: benchmark_all_models.py  generate_leaderboard.py  validate_algorithms.py  validate_readers.py  verify_submission.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
test_tools/: run_full_pipeline.py  run_full_tests.py
tests/: conftest.py  test_algorithms.py  test_all_algorithms_full.py  test_all_datasets_full.py  test_all_models_full.py  test_cli.py  test_download.py  test_inference.py  test_models.py  test_pipeline_guards.py  test_readers.py  test_registry.py  test_structure.py  test_utils.py  test_visualization.py
wsdp/: cli.py
(+94 files in other folders)
