[project]
name = "sdp-mvp"
version = "0.1.0"
description = "Minimal optimized CSI denoising and signal processing flow."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
